# workflows

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  VERSION  pyproject.toml  pytest.ini  requirements.txt  vcpkg.json
.git-hooks/: README.md  pre-commit
.git-hooks/pre-commit.d/: jupyter-nb-warn
.github/: labeler.yml  pull_request_template.md
.github/workflows/: build-and-test.yml  check-cpp-format.yml  check-format.yml  check-py-format.yml  check-version.yml  ci.yml  create-bindings-issue.yml  create-release.yml  merge-queue.yml  pr-labels.yml  pull-request.yml  push-to-main.yml  static-analysis.yml  unit-tests.yml  update-version.yml  validate-citation.yml  wheels.yml
cmake/: update_version.cmake
data/: .clang-tidy  CMakeLists.txt
docs/: CMakeLists.txt  CONTRIBUTING.rst  bibliography.rst  conf.py  getting-started.rst  index.rst  modCAM.bib
docs/algorithms/mesh/: principal_curvature_Rusinkiewicz2004.ipynb
docs/reference/: mesh.rst
include/: default_types.h
include/modcam/mesh/: concepts.h  per_vertex_basis_pro2024.h  per_vertex_normals_max1999.h  principal_curvature_rus2004.h  voronoi_area_mey2003.h
include/modcam/utility/: concepts.h  modulus.h  random_orthonormal.h
licenses/: BSD-3-Clause  README.md
src/: CMakeLists.txt  file.txt
src/modcam/: modcam.h
src/modcam/mesh/: CMakeLists.txt  mesh.h  per_vertex_basis_pro2024.test.cpp  per_vertex_normals_max1999.test.cpp  principal_curvature_rus2004.test.cpp  voronoi_area_mey2003.test.cpp
src/modcam/utility/: CMakeLists.txt  modulus.test.cpp  random_orthonormal.test.cpp
src/py_modcam/: doc
src/py_modcam/mesh/: doc  per_vertex_basis_pro2024.cpp  per_vertex_normals_max1999.cpp  principal_curvature_rus2004.cpp  voronoi_area_mey2003.cpp
tests/: CMakeLists.txt  run_tests.cpp
tests/mesh/: test_per_vertex_basis_pro2024.py  test_per_vertex_normals_max1999.py  test_principal_curvature_rus2004.py  test_voronoi_area_mey2003.py
tools/: bindings_boilerplate.py  changelog.py  is_virtual_env.py  rtd_setup.sh
tools/cibw/: cibw-install-tools-linux.sh  cibw-install-tools-macos.sh  cibw-install-tools-windows.ps1
tools/cmake/: FindSphinx.cmake  bind_submodule.cmake  modCAMConfig.cmake  modcam_dependencies.cmake  modcam_version.cmake  update_version.cmake  zero_pad_version.cmake
tools/cmake/toolchains/: clang.cmake
tools/packaging/: CMakeLists.txt
