# This file is part of modCAM, open source software for Computer Aided
# Manufacturing research.
# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
# SPDX-FileCopyrightText: Copyright contributors to the modCAM project.
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = [
    "nanobind >= 2.12.0",
    "numpy >=2.0.0",
    "scikit-build-core >= 0.12.2",
    "typing-extensions",
]
build-backend = "scikit_build_core.build"

[project]
name = "modcam"
version = "2025.03.02"
description = "Free and open source software for Computer Aided Manufacturing (CAM) research"
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Manufacturing",
	"Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/modCAM/modcam-python"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-design",
]
lint = [
    "ruff"
]
test = [
    "libigl",
    "pooch",
    "pytest",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
# wheel.py-api = "cp312"
# We can't use the stable ABI for now. Running abi3audit returns the following:
#     modcam-2025.3.2-cp312-abi3-linux_x86_64.whl: 1 extensions scanned;
#         0 ABI version mismatches and 2 ABI violations found                  
# {
#   "specs": {
#     "/tmp/cibuildwheel/built_wheel/modcam-2025.3.2-cp312-abi3-linux_x86_64.whl": {
#       "kind": "wheel",
#       "wheel": [
#         {
#           "name": "modcam.cpython-312-x86_64-linux-gnu.so",
#           "result": {
#             "is_abi3": false,
#             "is_abi3_baseline_compatible": true,
#             "baseline": "3.12",
#             "computed": "3.12",
#             "non_abi3_symbols": ["PyFrame_GetBack", "PyGILState_Check"],
#             "future_abi3_objects": {}
#           }
#         }
#       ]
#     }
#   }
# }

[tool.scikit-build.cmake]
build-type = "Release"

[tool.pytest]
strict = true
testpaths = [ "tests/" ]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
config-settings = 'cmake.args="--preset vcpkg"'

skip = [
    "cp39-win_arm64", # Numpy does not support Windows ARM64 for Python < 3.11
    "cp310-win_arm64",
    "cp314t-win*", # TODO: Figure out why free-threaded builds don't work on Windows
]

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-groups = ["test"]

test-skip = [
    "cp314t-*", # libigl (a test dependency) does not support free-threaded Python.
    "*-musllinux_aarch64",
    "*-win32", # libigl does not support 32-bit Windows.
    "*-win_arm64", # libigl does not support ARM64 Windows. TODO: Might be able to build it from source?
]

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y clang curl zip unzip tar",
    "git clone https://github.com/microsoft/vcpkg.git",
    "./vcpkg/bootstrap-vcpkg.sh -disableMetrics",
]
[tool.cibuildwheel.linux.environment]
CC="clang"
CXX="clang++"
VCPKG_ROOT="$(pwd)/vcpkg"
PATH="$VCPKG_ROOT:$PATH"

[tool.cibuildwheel.macos]
before-all = [
    "git clone https://github.com/microsoft/vcpkg.git",
    "./vcpkg/bootstrap-vcpkg.sh -disableMetrics",
]
environment = { VCPKG_ROOT="$(pwd)/vcpkg", PATH="$VCPKG_ROOT:$PATH", MACOSX_DEPLOYMENT_TARGET="10.15" }

[tool.cibuildwheel.windows]
environment = { VCPKG_ROOT="$VCPKG_INSTALLATION_ROOT" }

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk add build-base clang cmake curl git ninja tar zip unzip",
    "git clone https://github.com/microsoft/vcpkg.git",
    "./vcpkg/bootstrap-vcpkg.sh -disableMetrics",
]
inherit.environment = "append"
environment.VCPKG_FORCE_SYSTEM_BINARIES="1"

# This is a workaround until [vcpkg issue #1922](https://github.com/microsoft/vcpkg-tool/issues/1922)
# is fixed.
[[tool.cibuildwheel.overrides]]
select = "*-musllinux_aarch64"
before-all = [
    "apk add build-base clang cmake curl git ninja tar zip unzip",
    "git clone https://github.com/microsoft/vcpkg.git",
    "curl -L -o $(pwd)/vcpkg/scripts/vcpkg-tool-metadata.txt https://raw.githubusercontent.com/microsoft/vcpkg/be2e197ea5bc32028dad3c651053ed926d91a2d7/scripts/vcpkg-tool-metadata.txt",
    "./vcpkg/bootstrap-vcpkg.sh -disableMetrics",
]
